# auto-security-patch

./: .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  pyproject.toml
.claude/agent-memory/plan-to-code/: MEMORY.md  project_conventions.md
.github/workflows/: ci.yml  security-patch.yml
agents/: assessment_verifier.md  codebase_explorer.md  exploitability_assessor.md  fix_validator.md  fix_writer.md  normalizer.md  pr_author.md  vulnerability_researcher.md
e2e/: report.py  run_e2e.py  scan.py  validate.py
pipeline/: agent_config.py  datadog_client.py  datadog_poller.py  github_client.py  models.py  normalizer.py  pr_author.py  run_pipeline.py  sandbox.py  tools.py
pipeline/stages/: assessor.py  base.py  explorer.py  fix_writer.py  researcher.py  validator.py  verifier.py
tests/: test_assessor.py  test_datadog_client.py  test_datadog_poller.py  test_models.py  test_normalizer.py  test_tools.py  test_verifier.py
tests/fixtures/: bandit_finding.json  datadog_finding.json  freeform_finding.txt  sarif_finding.json
