[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "auto-security-patch"
version = "0.1.0"
description = "AI-powered security vulnerability remediation pipeline"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.42.0",
    "pydantic>=2.0",
    "PyGithub>=2.1",
    "gitpython>=3.1",
    "httpx>=0.27",
    "duckduckgo-search>=7.0",
    "beautifulsoup4>=4.12",
]

[tool.poetry]
packages = [{include = "pipeline"}]
include = ["agents/*.md"]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
black = ">=24.0"
flake8 = ">=7.0"
pylint = ">=3.0"

[tool.poetry.group.e2e.dependencies]
bandit = ">=1.7"

[tool.pytest.ini_options]
markers = ["e2e: end-to-end tests requiring API keys (deselect by default)"]
